--- a/src/main/webapp/static/css/grid.css
+++ b/src/main/webapp/static/css/grid.css
@@ -12,7 +12,7 @@
 /* #Base 960 Grid
 ================================================== */
 
-    .container_12{ position: relative; margin: 0 auto; padding: 20px;}
+    .container_12{ position: relative; margin: 0px auto; width: 80%;}
 	
    
 
